--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
  </header>
 <section class="home">
   <div>
-    <img src="imgs/main1.PNG" alt="image">
+    <img src="main1.PNG" alt="image">
   </div>
   <div class="home-content">
     <h1>
