--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <h3 class="typing-text">
       I'm a <span> </span>
     </h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut cum doloremque, et fugiat, harum illum incidunt itaque laboriosam neque nobis numquam odit perspiciatis provident repellat sed sunt ut vitae. Dignissimos?</p>
+    <p>Im currently working on this website !</p>
     <div class="social-icons">
       <a href="https://www.instagram.com/ion_2.o/"><i class="fa-brands fa-instagram"></i></a>
       <a href="#"><i class="fa-brands fa-whatsapp" ></i></a>
