--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
    <a href="#" class="logo">Gavrila Ionut Damian</a>
    <nav>
      <a href="#" class="active">Home</a>
-     <a href="#" class="active">Services</a>
+     <a href="#" class="active">Technologies</a>
      <a href="#" class="active">Skills</a>
      <a href="#" class="active">Education </a>
      <a href="#" class="active">Certificates</a>
-     <a href="#" class="active">Experience</a>
+     <a href="#" class="active">Experience and Projects</a>
    </nav>
  </header>
 <section class="home">
